--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "zod-i18n-map": "^2.27.0"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.0.0",
         "@types/node": "^20.17.9",
         "@types/react": "^18",
         "@types/react-beautiful-dnd": "^13.1.8",
@@ -70,7 +71,7 @@
         "eslint-config-next": "14.2.3",
         "postcss": "^8",
         "prisma": "^6.2.1",
-        "tailwindcss": "^3.4.1",
+        "tailwindcss": "^4.0.0",
         "typescript": "^5"
     }
 }
