--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "monaco-editor": "^0.48.0",
         "next": "^14.2.18",
         "next-auth": "^5.0.0-beta.18",
+        "next-themes": "^0.4.4",
         "react": "^18",
         "react-animate-height": "^3.2.3",
         "react-dom": "^18",
